# sdk-nrf

./: CODEOWNERS  west.yml
.github/: test-spec.yml
applications/asset_tracker_v2/: overlay-lwm2m.conf
applications/audio/broadcast_configuration_tool/: CMakeLists.txt  prj.conf
applications/nrf5340_audio/: CMakeLists.txt  Doxyfile  Kconfig  prj.conf  prj_fota.conf  prj_release.conf
applications/nrf5340_audio/broadcast_sink/: main.c
applications/nrf5340_audio/broadcast_source/: main.c
applications/nrf5340_audio/child_image/: hci_ipc.conf
applications/nrf5340_audio/include/: nrf5340_audio_common.h  zbus_common.h
applications/nrf5340_audio/microphone/: Kconfig.defaults  (+1 more)
applications/nrf_audio/: prj_release.conf
doc/_zoomin/: ncs.tags.yml
doc/nrf/: links.txt  shortcuts.txt
include/: audio_defines.h  sample_rate_converter.h
lib/sample_rate_converter/: Kconfig  sample_rate_converter.c  sample_rate_converter_filter.c  sample_rate_converter_filter.h
samples/lc3_comparison/: CMakeLists.txt  prj.conf
scripts/: quarantine_integration.yaml
scripts/ci/: license_allow_list.yaml  tags.yaml
sysbuild/: Kconfig.mcuboot
tests/bluetooth/bsim/broadcast_config_tool/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  prj.conf  sysbuild.cmake
tests/bluetooth/bsim/broadcast_config_tool/include/: bct_test.h
tests/bluetooth/bsim/broadcast_config_tool/src/: broadcast_config_tool_test.c  test_main.c
tests/bluetooth/bsim/broadcast_config_tool/sysbuild/ipc_radio/: prj.conf
tests/bluetooth/bsim/broadcast_config_tool/test_scripts/: broadcast_config_tool.sh  compile.sh
(+178 files in other folders)
